<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical|center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.jimmy.uabcs.bibliouabcs.views.AboutFragment"
              android:background="#3F51B5"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true">

<LinearLayout
    android:id="@+id/ll1"
    android:layout_width="match_parent"
    android:layout_height="118dp"
    android:gravity="center_vertical|center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:textSize="30dp"
        android:textColor="#ffffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:text="@string/version"
        android:id="@+id/textView5"
        android:textSize="20dp"
        android:textColor="#ffffffff" />


</LinearLayout>
<LinearLayout
    android:id="@+id/ll3"
    android:layout_width="match_parent"
    android:layout_height="166dp"
    android:gravity="center_vertical|center_horizontal"
    android:layout_below="@id/ll1">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logouabcs"
        android:layout_centerInParent="true"/>
</LinearLayout>

<LinearLayout
    android:id="@+id/ll2"
    android:layout_width="match_parent"
    android:layout_height="166dp"
    android:gravity="center_vertical|center_horizontal"
    android:layout_below="@id/ll1">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:text="@string/copyright"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:textColor="#ffffffff" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:text="@string/copyright_extra"
        android:id="@+id/textView6"
        android:textSize="15dp"
        android:textColor="#ffffffff" />
</LinearLayout>

</LinearLayout>